# data-portfolio

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  history.md  index.html  portfolio_app.py  portfolio_config.py  pyproject.toml  requirements-app.txt  robots.txt  site.webmanifest  sitemap.xml  validate_site.py
.github/workflows/: test.yml
01-demand-forecasting-rwanda/: README.md  notebook.ipynb
02-electricity-load-forecasting-pjm/: README.md  notebook.ipynb
03-insurance-claims-fremtpl2/: README.md  notebook.ipynb
04-retail-demand-m5/: README.md  notebook.ipynb
05-resource-allocation-kenya/: README.md  notebook.ipynb
06-river-flow-forecasting-kariba/: README.md  download_data.py  notebook.ipynb  requirements.txt
07-solar-forecasting-nairobi/: README.md  download_data.py  notebook.ipynb
08-customer-survival-mtn-tenure/: README.md  download_data.py  notebook.ipynb  requirements.txt
09-flight-demand-southern-africa/: README.md  download_data.py  notebook.ipynb
10-property-valuation-lagos/: README.md  download_data.py  notebook.ipynb
11-geospatial-farm-households/: README.md  download_data.py  notebook.ipynb
12-churn-prediction-mtn/: README.md  download_data.py  notebook.ipynb  requirements.txt
13-ab-test-marketing/: README.md  download_data.py  notebook.ipynb
case-studies/: index.html
case-studies/fremtpl2/: index.html
case-studies/kariba/: index.html
case-studies/kenya/: index.html
case-studies/pjm/: index.html
case-studies/solar/: index.html
fr/: index.html
fr/01-demand-forecasting-rwanda/: README.md
fr/02-electricity-load-forecasting-pjm/: README.md
fr/03-insurance-claims-fremtpl2/: README.md
(+16 files in other folders)
